@@ -453,6 +453,8 @@ opj_codestream_info_v2_t* jp2_get_cstr_info(opj_jp2_v2_t* p_jp2);
  */
 opj_codestream_index_t* jp2_get_cstr_index(opj_jp2_v2_t* p_jp2);
 
+opj_bool jp2_set_decoded_resolution_factor(opj_jp2_v2_t *p_jp2, OPJ_UINT32 res_factor, opj_event_mgr_t * p_manager);
+
 /*@}*/
 
 /*@}*/
